[Qt] window.open passes height and width parameters even if not defined in a page https://bugs.webkit.org/show_bug.cgi?id=107705

Reviewed by Kenneth Rohde Christiansen.

Source/WebCore:

Do not override width or height of 0, as that indicates default size, and not minimum size.

Tested by tst_qwebpage.

* page/DOMWindow.cpp:
(WebCore::DOMWindow::adjustWindowRect):

Source/WebKit/efl:

Do not resize window when default size is requested.

* WebCoreSupport/ChromeClientEfl.cpp:
(WebCore::ChromeClientEfl::setWindowRect):

Source/WebKit/gtk:

Do not resize window when default size is requested.

* WebCoreSupport/ChromeClientGtk.cpp:
(WebKit::ChromeClient::setWindowRect):

Source/WebKit/qt:

Test that minimum size is applied only when the requested size is too small,
not when default is requested.

* tests/qwebpage/tst_qwebpage.cpp:
(tst_QWebPage):
(TestPage):
(TestPage::TestPage):
(TestPage::createWindow):
(TestPage::slotGeometryChangeRequested):
(tst_QWebPage::openWindowDefaultSize):


Canonical link: https://commits.webkit.org/127975@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142755 268f45cc-cd09-0410-ab3c-d52691b4dbfc